--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_535D76"
             android:textSize="@dimen/textSize13sp"
             android:textStyle="bold"
             android:typeface="monospace"
@@ -54,6 +54,7 @@
             android:layout_width="1dp"
             android:layout_height="20dp"
             android:layout_margin="10dp"
+            android:visibility="invisible"
             android:background="@color/color_1F1F1F_E2E2E2" />
 
         <EditText
