--- a/app/src/main/res/layout/online_pay_fragment.xml
+++ b/app/src/main/res/layout/online_pay_fragment.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:overScrollMode="never"
     android:background="@color/color_141414_F3F4F5"
+    android:overScrollMode="never"
     tools:context=".ui.money.recharge.OnlinePayFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_14"
         android:background="@color/color_141414_F3F4F5"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:orientation="vertical"
-        android:padding="14dp">
+        android:orientation="vertical">
 
         <!-- 帳號 -->
         <org.cxct.sportlottery.ui.login.LoginEditText
             android:id="@+id/et_recharge_online_payer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cvEms="20"
             app:cvHint="@string/edt_hint_payer"
             app:cvInputType="text"
-            app:cvEms="20"
             app:cvTitle="@string/title_payer" />
 
 
@@ -85,8 +84,8 @@
                     android:layout_marginStart="9dp"
                     android:layout_weight="1"
                     android:background="@null"
-                    android:textColor="@color/color_BBBBBB_333333"
                     android:gravity="center_vertical"
+                    android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
 
                 <ImageView
@@ -132,7 +131,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="15dp"
                     android:background="@color/color_666666_bcbcbc" />
-                
+
                 <ImageView
                     android:id="@+id/iv_bank_icon"
                     android:layout_width="20dp"
@@ -147,8 +146,8 @@
                     android:layout_marginStart="9dp"
                     android:layout_weight="1"
                     android:background="@null"
-                    android:textColor="@color/color_BBBBBB_333333"
                     android:gravity="center_vertical"
+                    android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
 
                 <ImageView
@@ -215,16 +214,16 @@
                 android:layout_height="wrap_content"
 
                 android:textColor="@color/color_E44438_e44438"
-                tools:text="PHP"
-                android:textSize="@dimen/textSize12sp" />
+                android:textSize="@dimen/textSize12sp"
+                tools:text="PHP" />
 
             <TextView
                 android:id="@+id/tv_fee_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp"
-                android:layout_marginStart="4dp"
                 tools:text="12.000" />
 
 
@@ -256,16 +255,18 @@
 
         <Button
             android:id="@+id/btn_submit"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="20dp"
-            android:background="@drawable/bg_radius_20_button_dusk"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:background="@drawable/ic_submit"
             android:gravity="center"
             android:text="@string/btn_submit"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
-            android:textStyle="bold"
-            style="?android:attr/borderlessButtonStyle"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
